--- a/notebooks/Data Preprocessing.ipynb
+++ b/notebooks/Data Preprocessing.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3770933b",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "a89fb2e4",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,99 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "faa6ba87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "4e3c5a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cardboard: 700 images\n",
+      "glass: 700 images\n",
+      "metal: 700 images\n",
+      "paper: 700 images\n",
+      "plastic: 700 images\n",
+      "trash: 700 images\n"
+     ]
+    }
+   ],
+   "source": [
+    "TRAIN_DIR = Path(r\"C:\\Users\\DELL\\myGithub\\Automated-Material-Stream-Identification-System-MSI-\\data\\split\\train\")\n",
+    "\n",
+    "for cls_dir in TRAIN_DIR.iterdir():\n",
+    "    if cls_dir.is_dir():\n",
+    "        count = len(list(cls_dir.glob(\"*.jpg\")))\n",
+    "        print(f\"{cls_dir.name}: {count} images\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8986c9fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cardboard: 37 images\n",
+      "glass: 61 images\n",
+      "metal: 48 images\n",
+      "paper: 66 images\n",
+      "plastic: 57 images\n",
+      "trash: 17 images\n"
+     ]
+    }
+   ],
+   "source": [
+    "TRAIN_DIR = Path(r\"C:\\Users\\DELL\\myGithub\\Automated-Material-Stream-Identification-System-MSI-\\data\\split\\test\")\n",
+    "\n",
+    "for cls_dir in TRAIN_DIR.iterdir():\n",
+    "    if cls_dir.is_dir():\n",
+    "        count = len(list(cls_dir.glob(\"*.jpg\")))\n",
+    "        print(f\"{cls_dir.name}: {count} images\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2629ee5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cardboard: 35 images\n",
+      "glass: 58 images\n",
+      "metal: 47 images\n",
+      "paper: 67 images\n",
+      "plastic: 50 images\n",
+      "trash: 16 images\n"
+     ]
+    }
+   ],
+   "source": [
+    "TRAIN_DIR = Path(r\"C:\\Users\\DELL\\myGithub\\Automated-Material-Stream-Identification-System-MSI-\\data\\split\\val\")\n",
+    "\n",
+    "for cls_dir in TRAIN_DIR.iterdir():\n",
+    "    if cls_dir.is_dir():\n",
+    "        count = len(list(cls_dir.glob(\"*.jpg\")))\n",
+    "        print(f\"{cls_dir.name}: {count} images\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73e558a6",
    "metadata": {},
    "outputs": [],
    "source": []
