updating SVM notebook and uploading the final Report

--- a/notebooks/FE+SVM.ipynb
+++ b/notebooks/FE+SVM.ipynb
@@ -24,7 +24,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "juSkIovLSaKH",
-        "outputId": "7a85dfb0-6460-4fd7-8f55-c1e016d2d142"
+        "outputId": "399a1980-0945-4456-d9d0-2edd75ccb498"
       },
       "outputs": [
         {
@@ -32,11 +32,13 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Automated-Material-Stream-Identification-System-MSI-'...\n",
-            "remote: Enumerating objects: 12824, done.\u001b[K\n",
-            "remote: Total 12824 (delta 0), reused 0 (delta 0), pack-reused 12824 (from 2)\u001b[K\n",
-            "Receiving objects: 100% (12824/12824), 426.77 MiB | 13.83 MiB/s, done.\n",
-            "Resolving deltas: 100% (227/227), done.\n",
-            "Updating files: 100% (8161/8161), done.\n"
+            "remote: Enumerating objects: 12866, done.\u001b[K\n",
+            "remote: Counting objects: 100% (42/42), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (38/38), done.\u001b[K\n",
+            "remote: Total 12866 (delta 5), reused 33 (delta 4), pack-reused 12824 (from 2)\u001b[K\n",
+            "Receiving objects: 100% (12866/12866), 434.86 MiB | 23.77 MiB/s, done.\n",
+            "Resolving deltas: 100% (232/232), done.\n",
+            "Updating files: 100% (8197/8197), done.\n"
           ]
         }
       ],
@@ -58,7 +60,7 @@
       "metadata": {
         "id": "sswK_OAUS7Ah"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -72,7 +74,7 @@
       "metadata": {
         "id": "nElX1dgJSabf"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -85,7 +87,7 @@
       "metadata": {
         "id": "6nkfSsL6UUVs"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -100,7 +102,7 @@
       "metadata": {
         "id": "5C_I9UPRUmae"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -112,7 +114,7 @@
       "metadata": {
         "id": "X6kQ8mFiUzfC"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -124,7 +126,7 @@
       "metadata": {
         "id": "XveKIkAfU-aC"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -137,15 +139,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "moI8T_16VBac",
-        "outputId": "612074e5-60d1-4d82-8854-4226d35eab44"
+        "outputId": "ee36c016-cc98-4808-de87-0d66004812b9"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['cardboard', 'glass', 'metal', 'paper', 'plastic', 'trash']\n"
+            "['0_glass', '1_paper', '2_cardboard', '3_plastic', '4_metal', '5_trash']\n"
           ]
         }
       ]
@@ -163,9 +165,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BY1zvhtuVDLK",
-        "outputId": "333f4dd5-cee0-4c52-a515-6c6dae2bc987"
+        "outputId": "5cbc5156-a7b1-404c-964d-650f2fc6d4b3"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +180,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 20.5M/20.5M [00:00<00:00, 139MB/s]\n"
+            "100%|██████████| 20.5M/20.5M [00:00<00:00, 133MB/s]\n"
           ]
         },
         {
@@ -629,7 +631,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -657,7 +659,7 @@
       "metadata": {
         "id": "kVJk6-xfV4aa"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -674,16 +676,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ThjrthSxWCkn",
-        "outputId": "66217bd4-7509-41da-ab9f-8de75deed2d5"
+        "outputId": "09701f0c-0321-42f0-b24d-2f5b9dd1be21"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Train features: (3300, 1280)\n",
-            "Val features: (401, 1280)\n"
+            "Train features: (3296, 1280)\n",
+            "Val features: (404, 1280)\n"
           ]
         }
       ]
@@ -701,49 +703,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eCMg07z1Xlpm",
-        "outputId": "3b50b92a-06a5-4f48-83bb-f8fca3b099e9"
+        "outputId": "c89fe438-f049-4af9-da18-6a06f1f2e035"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test features: (275, 1280)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import GridSearchCV\n",
-        "\n",
-        "param_grid = {\n",
-        "    'C': [1, 10, 50, 100],\n",
-        "    'gamma': ['scale', 0.01, 0.001],\n",
-        "    'kernel': ['rbf']\n",
-        "}\n",
-        "\n",
-        "grid = GridSearchCV(SVC(), param_grid, cv=5, n_jobs=-1)\n",
-        "grid.fit(train_X, train_y)\n",
-        "print(grid.best_params_)\n",
-        "best_svm = grid.best_estimator_\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fUJF-0LVYzU3",
-        "outputId": "45ece929-0140-46b1-8378-758e71442739"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'C': 10, 'gamma': 'scale', 'kernel': 'rbf'}\n"
+            "Test features: (270, 1280)\n"
           ]
         }
       ]
@@ -765,15 +733,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "slF_DFKoTVrl",
-        "outputId": "c6736a06-16fa-48cc-8dfc-911782bf50b3"
+        "outputId": "51d1e74f-8102-47a0-9b42-bcb8490f3d92"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SVM Accuracy: 0.9476309226932669\n"
+            "SVM Accuracy: 0.943069306930693\n"
           ]
         }
       ]
@@ -791,15 +759,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0m_QQnFqTY68",
-        "outputId": "20544453-7923-47d2-83cd-5459aabf34ec"
+        "outputId": "a5e1688b-ba44-4c79-8a20-eb7ae918cbd2"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SVM Accuracy: 0.9351620947630923\n"
+            "SVM Accuracy: 0.9232673267326733\n"
           ]
         }
       ]
@@ -816,7 +784,7 @@
       "metadata": {
         "id": "nSm6X8AdThcD"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -831,15 +799,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bbyq9_JGTkAi",
-        "outputId": "b4cea7ec-44ca-4702-ac28-014065896862"
+        "outputId": "7448d25b-2cfe-4d33-f789-9f28fff78d17"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SVM Accuracy: 0.9501246882793017\n"
+            "SVM Accuracy: 0.9455445544554455\n"
           ]
         }
       ]
@@ -863,9 +831,9 @@
           "height": 80
         },
         "id": "kMUHuvXnTm6X",
-        "outputId": "ef2a78ed-ecc6-49c9-8c41-d90365425e99"
+        "outputId": "507f488a-9ea7-4a8b-bc2e-f06872bb3d27"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1293,7 +1261,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 17
         }
       ]
     },
@@ -1309,15 +1277,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uT8g7ZJOYk9A",
-        "outputId": "49fed733-f6a0-45e0-e720-a8885f693763"
+        "outputId": "6b870831-ea5f-4808-a147-7e076da8a12a"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Closed-set Val Accuracy: 0.9501246882793017\n"
+            "Closed-set Val Accuracy: 0.9455445544554455\n"
           ]
         }
       ]
@@ -1353,7 +1321,7 @@
       "metadata": {
         "id": "geVp2ORcYzKU"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1362,13 +1330,13 @@
         "pred_unknown, confs = predict_with_unknown(\n",
         "    val_pca,\n",
         "    svm,\n",
-        "    threshold=0.45\n",
+        "    threshold=0.7\n",
         ")"
       ],
       "metadata": {
         "id": "Xm68yI-9Yq_H"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1382,15 +1350,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KCpSMVK8Y1j3",
-        "outputId": "85280b83-c91e-483b-df1b-e4659de682f4"
+        "outputId": "41382737-4bc1-4e82-932f-26f21a124e7e"
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Open-set Val Accuracy: 0.9476309226932669\n"
+            "Open-set Val Accuracy: 0.9084158415841584\n"
           ]
         }
       ]
@@ -1398,7 +1366,7 @@
     {
       "cell_type": "code",
       "source": [
-        "for t in [0.3, 0.35, 0.4, 0.45, 0.5]:\n",
+        "for t in [0.3, 0.35, 0.4, 0.45, 0.5,0.6,0.7]:\n",
         "    pred_t, _ = predict_with_unknown(val_pca, svm, threshold=t)\n",
         "    acc = accuracy_score(val_y, pred_t)\n",
         "    print(f\"Threshold={t:.2f} → Acc={acc:.4f}\")"
@@ -1408,19 +1376,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9tO4y_Q9Y6CL",
-        "outputId": "840d4632-3e37-4e51-bc54-0c6c3d8dd810"
+        "outputId": "92aecfe7-e25d-4f5e-a009-16c8ff02eb96"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Threshold=0.30 → Acc=0.9476\n",
-            "Threshold=0.35 → Acc=0.9476\n",
-            "Threshold=0.40 → Acc=0.9476\n",
-            "Threshold=0.45 → Acc=0.9476\n",
-            "Threshold=0.50 → Acc=0.9401\n"
+            "Threshold=0.30 → Acc=0.9455\n",
+            "Threshold=0.35 → Acc=0.9455\n",
+            "Threshold=0.40 → Acc=0.9455\n",
+            "Threshold=0.45 → Acc=0.9431\n",
+            "Threshold=0.50 → Acc=0.9356\n",
+            "Threshold=0.60 → Acc=0.9208\n",
+            "Threshold=0.70 → Acc=0.9084\n"
           ]
         }
       ]
@@ -1444,15 +1414,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "leDP84-HZmeg",
-        "outputId": "41b23714-5584-4b6b-ca0a-8c00d0a8a76f"
+        "outputId": "ffd64ed7-353a-43b2-82fa-5e15bd608945"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Final Test Accuracy: 0.9272727272727272\n"
+            "Final Test Accuracy: 0.9333333333333333\n"
           ]
         }
       ]
@@ -1462,27 +1432,84 @@
       "source": [
         "import joblib\n",
         "\n",
-        "joblib.dump(svm, \"svm_model.pkl\")\n",
-        "joblib.dump(pca, \"pca_model.pkl\")"
+        "joblib.dump(svm, \"svm_model2.pkl\")\n",
+        "joblib.dump(pca, \"pca_model2.pkl\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JGk4H1zqZ-KH",
-        "outputId": "275267a5-558a-4cb3-ad1d-2f1c36c8e5ad"
+        "outputId": "e9824d7b-41bf-4bf9-9ed9-e800c2d75c17"
       },
-      "execution_count": 25,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['pca_model.pkl']"
+              "['pca_model2.pkl']"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "print(classification_report(\n",
+        "    test_y,\n",
+        "    test_pred,\n",
+        "    target_names=[\n",
+        "        \"Glass\", \"Paper\", \"Cardboard\",\n",
+        "        \"Plastic\", \"Metal\", \"Trash\", \"Unknown\"\n",
+        "    ]\n",
+        "))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3iGOB4IEtuPj",
+        "outputId": "04d73903-dcc9-413c-d2d0-669ed9a3b0c4"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "       Glass       0.93      0.90      0.91        48\n",
+            "       Paper       0.95      0.96      0.95        54\n",
+            "   Cardboard       0.97      0.90      0.93        39\n",
+            "     Plastic       0.90      0.91      0.91        47\n",
+            "       Metal       0.95      0.95      0.95        42\n",
+            "       Trash       0.97      0.97      0.97        40\n",
+            "     Unknown       0.00      0.00      0.00         0\n",
+            "\n",
+            "    accuracy                           0.93       270\n",
+            "   macro avg       0.81      0.80      0.80       270\n",
+            "weighted avg       0.94      0.93      0.94       270\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+          ]
         }
       ]
     },
@@ -1490,7 +1517,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "CE7fp87Caq0u"
+        "id": "vS5BhrwPNuOG"
       },
       "execution_count": null,
       "outputs": []
